--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
   <body>
     <h1>Spill the Ink</h1>
     <h2>GISA Writer's Socie</h2>
-        <iframe src="https://docs.google.com/presentation/d/1GqXK8IjZ_nbeoVYJQqRqeCJpEu6ykezuaKXpTrZtSG0/edit?usp=sharing" 
-            width="800" 
-            height="600" 
-            frameborder="0" 
-            allowfullscreen="true" 
-            mozallowfullscreen="true" 
-            webkitallowfullscreen="true">
-    </iframe>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </body>
 </html>
