--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <DOCTYPE html> 
 <html>
   <head>
-    <title>Spill the Ink</title>
+    <title> Spill the Ink</title>
   </head>
-  <body>
+  <bodystyle="background-color: #f7f5e9;">
     <h1>Spill the Ink</h1>
-    <h2>GISA Writer's Society</h2>
+    <h2> GISA Writer's Society</h2>
     <bg-color>#f7f5e9</bg-color>
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </body>
