--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <DOCTYPE html> 
 <html>
   <head>
+        <style>
+            body {
+                background-color: #f7f5e9;
+            }
+        </style>
     <title> Spill the Ink</title>
   </head>
   <body style="background-color: #f7f5e9;">
