--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title> Spill the Ink</title>
   </head>
   <body>
-    <h1 style="text-align: center; text-color: #f7f5e9;">Spill the Ink</h1>
+    <h1>Spill the Ink</h1>
+        <style>
+              "text-align: center;"
+              "text-color: #f7f5e9;"
+              "font-family: 'Brush Script MT', cursive;"
+        </style>
     <h2> GISA Writer's Society</h2>
     <bg-color>#f7f5e9</bg-color>
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
