--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <title> Spill the Ink</title>
   </head>
   <body>
-    <h1>Spill the Ink</h1>
+    <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive; >Spill the Ink</h1>
         <style>
-              "text-align: center;"
-              "text-color: #f7f5e9;"
-              "font-family: 'Brush Script MT', cursive;"
         </style>
     <h2> GISA Writer's Society</h2>
     <bg-color>#f7f5e9</bg-color>
