--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <DOCTYPE html> 
 <html>
   <head>
+    <link href="https://fonts.cdnfonts.com/css/anasteziya" rel="stylesheet">
         <style>
             body {
                 background-color: #f7f5e9;
+                font-family: 'Anasteziya', sans-serif;
             }
         </style>
     <title> Spill the Ink</title>
