--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         <h2> GISA Writer's Society</h2>
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </center>
+      <button class="btn btn-outline-light p-2 m-2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="true" id="sidebarToggle">
+    ☰ Menu
+    </button>
   </body>
 </html>
