--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
     <title> Spill the Ink</title>
   </head>
   <body>
-      <center>
-        <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive;>Spill the Ink</h1>
-        <h2> GISA Writer's Society</h2>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-      </center>
-      <button class="btn btn-outline-light p-2 m-2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="true" id="sidebarToggle">
-    ☰ Menu </button>
-        <!-- Sidebar -->
-        <div class="sidebar collapse show" id="sidebarNav" style="">
-        <nav class="nav flex-column pt-4">
-            <a class="nav-link active" href="badges.html">Badges</a>
-            <a class="nav-link" href="reports.html">Reports</a>
-        </nav>
-        </div>
-        
-    </button>
+    <button>Menu</button>
+      <style>
+        .my-custom-button {
+            background-color: #61402b; 
+            border: none;              
+            color: #e7dac6;             
+            padding: 15px 32px;        
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 8px 4px;
+            cursor: pointer;          
+            border-radius: 8px;        
+        }
+      </style>
+    <center>
+      <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive;>Spill the Ink</h1>
+      <h2> GISA Writer's Society</h2>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>      </center>
   </body>
 </html>
