--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <body>
     <button>Menu</button>
       <style>
-        .my-custom-button {
+        .button {
             background-color: #61402b; 
             border: none;              
             color: #e7dac6;             
-            padding: 15px 32px;        
+            padding: 100px 100px;        
             text-align: center;
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 8px 4px;
+            margin: 100px 100px;
             cursor: pointer;          
             border-radius: 8px;        
         }
