--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
+            font-size: 25px;
             margin: 100px 100px;
             cursor: pointer;          
-            border-radius: 8px;        
+            border-radius: 8px;   
+            width: 100px;
+            height: 50px;
         }
       </style>
     <center>
