--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <button>Menu</button>
       <style>
-        .button {
+        button {
             background-color: #61402b; 
             border: none;              
             color: #e7dac6;             
