--- a/index.html
+++ b/index.html
@@ -11,23 +11,15 @@
     <title> Spill the Ink</title>
   </head>
   <body>
-    <button>Menu</button>
-      <style>
-        button {
-            background-color: #61402b; 
-            border: none;              
-            color: #e7dac6;             
-            padding: 100px 100px;        
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 25px;
-            margin: 100px 100px;
-            cursor: pointer;          
-            border-radius: 8px;   
-            width: 100px;
-            height: 50px;
-        }
+    <button class="btn btn-outline-light p-2 m-2"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#sidebarNav"
+      aria-controls="sidebarNav"
+      aria-expanded="true"
+      id=sidebarToggle>
+      ∷ Menu
+    </button>
       </style>
     <center>
       <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive;>Spill the Ink</h1>
