--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       id=sidebarToggle>
       ∷ Menu
     </button>
+   <div class="sidebar collapse show" id="sidebarNav"></div>
+     <nav class="nav flex-column pt-4"></nav>
+      <a class="nav-link active" href="">
       </style>
     <center>
       <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive;>Spill the Ink</h1>
