--- a/index.html
+++ b/index.html
@@ -17,15 +17,25 @@
       data-bs-target="#sidebarNav"
       aria-controls="sidebarNav"
       aria-expanded="true"
-      id=sidebarToggle>
+      id=sidebarToggle
+      >
       ∷ Menu
     </button>
+    <!-- Sidebar -->
    <div class="sidebar collapse show" id="sidebarNav"></div>
      <nav class="nav flex-column pt-4"></nav>
-      <a class="nav-link active" href="">
-      </style>
+      <a class="nav-link active" href="https://mailynnerudnicki-web.github.io/Spill.the.Ink/?scrlybrkr=059b5555">News</a>
+      <a class="nav-link" href="https://mailynnerudnicki-web.github.io/Spill.the.Ink/?scrlybrkr=059b5555">Blog</a>
+      </nav>
+    </div>
+    <!-- Main Content -->
+    <div class="main-content" id="mainContent"> == $O
+      <!-- Top Navbar -->
+      <div class="top-navbar card text-#f7f5e9 font-'JMH Typewriter' bg-light mb-3">flex == $0
+        <h4 class="m-0 p-2">Home</h4>
+      </div>
     <center>
-      <h1 text-align: center; text-color: #f7f5e9; font-family: Brush Script MT, cursive;>Spill the Ink</h1>
+      <h1 text-align: center; text-color: #f7f5e9;>Spill the Ink</h1>
       <h2> GISA Writer's Society</h2>
       <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkWmPkrXcPP8d6Qze1oS4Olj5XACdyvhXMfEeQk7_jLUnjzPKSns4yTLNhPBK-zL1JXyF3oe6_C6-h/pubembed?start=true&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>      </center>
   </body>
